# banking-example

./: Cargo.toml  LICENSE  README.md  accounts.csv  transactions.csv
src/: main.rs  model.rs
tests/: mod.rs
