[package]
name = "banking-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
csv = "1.1.6"
rust_decimal = "1.21"
rust_decimal_macros = "1.21"
strum = { version = "0.23", features = ["derive"] }
strum_macros = "0.23.1"